--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@nestjs/cli": "^9.0.0",
 		"@nestjs/schematics": "^9.0.0",
 		"@nestjs/testing": "^9.0.0",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.13",
 		"@types/fs-extra": "^11.0.1",
